prevent overlapping of events

--- a/style.css
+++ b/style.css
@@ -146,7 +146,9 @@ main {
     font-size: 3em;
 }
 
-/* .title span {
-    border-radius: 15px;
-    background-color: #ffffff88;
-} */
+@media screen and (max-width: 620px) {
+    /* For mobile phones: */
+    .menu, .main, .right {
+      width: 100%;
+    }
+  }
